--- a/DocsvisionClientServer/DocsvisionClientServer.csproj
+++ b/DocsvisionClientServer/DocsvisionClientServer.csproj
@@ -13,4 +13,12 @@
       </Content>
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="FluentValidation" Version="11.4.0" />
+      <PackageReference Include="MassTransit" Version="7.3.1" />
+      <PackageReference Include="MassTransit.AspNetCore" Version="7.3.1" />
+      <PackageReference Include="MassTransit.Extensions.DependencyInjection" Version="7.3.1" />
+      <PackageReference Include="MassTransit.RabbitMQ" Version="7.3.1" />
+    </ItemGroup>
+
 </Project>
