--- a/DocsvisionClientServer/DocsvisionClientServer.csproj
+++ b/DocsvisionClientServer/DocsvisionClientServer.csproj
@@ -21,4 +21,8 @@
       <PackageReference Include="MassTransit.RabbitMQ" Version="7.3.1" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Controllers" />
+    </ItemGroup>
+
 </Project>
