--- a/DocsvisionClientServer/DocsvisionClientServer.csproj
+++ b/DocsvisionClientServer/DocsvisionClientServer.csproj
@@ -19,6 +19,7 @@
       <PackageReference Include="MassTransit.AspNetCore" Version="7.3.1" />
       <PackageReference Include="MassTransit.Extensions.DependencyInjection" Version="7.3.1" />
       <PackageReference Include="MassTransit.RabbitMQ" Version="7.3.1" />
+      <PackageReference Include="System.Net.Http" Version="4.3.4" />
     </ItemGroup>
 
 </Project>
